[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hid_ups_exporter"
version = "0.1.0"
authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "Export HID UPS stats to Prometheus"
#readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "hid_ups >= 0.2.0",
    "prometheus_exporter >= 0.7.1",
    "zenlib >= 1.5.0"
]

[project.scripts]
hid_ups_exporter = "hid_ups_exporter.main:main"
